# simple_fbp

./: Cargo.toml  Readme.md  presentation.md
crates/simple_actor/: Cargo.toml
crates/simple_actor/src/: actor.rs  lib.rs
crates/simple_fbp/: Cargo.toml
crates/simple_fbp/src/: lib.rs  network.rs
