[workspace]
resolver = '2'
members = [
    "crates/*"
]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.86"
flume = "0.11.0"
rusty_pool = "0.7.0"
once_cell = "1.19.0"